[gd_scene load_steps=10 format=4 uid="uid://bl3l8std3wcxc"]

[ext_resource type="PackedScene" uid="uid://rjnmowlocoil" path="res://model/old_computer_monitor.glb" id="1_pa6c8"]
[ext_resource type="Script" uid="uid://fcvs1kw8emjm" path="res://script/computer.gd" id="2_413xo"]
[ext_resource type="Texture2D" uid="uid://7pvl3emjcoau" path="res://model/computer_texture.png" id="2_gcipr"]
[ext_resource type="Script" uid="uid://bsbvd72lvwu8p" path="res://script/terminal_reference.gd" id="4_755ft"]
[ext_resource type="Theme" uid="uid://rls2qjbal6dt" path="res://style/terminal.tres" id="5_37hri"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d40no"]
resource_name = "computer"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
albedo_texture = ExtResource("2_gcipr")
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_d5qpx"]
_surfaces = [{
"aabb": AABB(-0.994345, -0.7985, -0.359253, 1.29199, 1.7892, 1.96382),
"format": 34896613377,
"index_count": 120,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAHAAMAAgAGAAcABgAFAAcABgAEAAUABAABAAUABAAAAAEAAgAEAAYAAgAAAAQABwABAAMABwAFAAEACQAKAAgACQALAAoADgATAA8ADgASABMACwAPAAoACwAOAA8ACAAMAAkACAANAAwACgANAAgACgAPAA0ACQAOAAsACQAMAA4AEwAVABEAEwAXABUADQAQAAwADQARABAADwARAA0ADwATABEADAASAA4ADAAQABIAFAAXABYAFAAVABcAEAAWABIAEAAUABYAEgAXABMAEgAWABcAEQAUABAAEQAVABQA"),
"name": "computer",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AACGNwLqAAAAACntAuoAAAAAhjf8FQAAAAAp7fwVAAD//7Ek//8AAP///////wAA//+xJAAAAAD/////AAAAAEBbozmCmQAAQFujOXxmAAC+pNQzzZ4AAL6k1DMxYQAAhVemEXxmAACFV6YRgpkAAAKh2AsxYQAAAqHYC82eAADWIeQVNkEAANYh5BXIvgAAstaaBzE0AACy1poHzcsAADMhAAA2QQAAMyEAAMi+AAAP1gAAMTQAAA/WAADNywAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_a2npm"]
resource_name = "old_computer_monitor_desk"
_surfaces = [{
"aabb": AABB(-0.994345, -0.7985, -0.359253, 1.29199, 1.7892, 1.96382),
"attribute_data": PackedByteArray("ggSRwIFk///EyMMnBGlVuwM5//9JncMn/y+RwP4vkcDEyCNcBGn2hoEEkcBJnSNcgJ3//wAAO4EEaZHABGn//0mdw8CCNJHAgJ3DwII0O4GCNP//BGnDwEmdh4EAAP7/R6sz05pf40maX5Qoy54z032QW0KaX503k6z/wH2QW0KaX503gJ3/wH2QNDB9kKJUzqmy8m+ZW0KIaJ03Sray8o1o5EmIaJQog6h/4GyZNDBvmaFUlrd/4GyZW0KNaJ03r6D+/yU2q5OaX+Ruab///1+VolSaX+RJgJ0z06KY21RWOJHAmMIz06KYh4Etk4eBBGkELAY7q5N8ZORuBGkEB32QolR8ZORJG47aL1Sa21QJOnfAG44uA1Sah4F6kW2B"),
"format": 34896613399,
"index_count": 120,
"index_data": PackedByteArray("AgALAAUAAgAIAAsABwAXAAoABwAUABcAEgAPABUAEgAMAA8ADgAEABEADgABAAQABgANABMABgAAAA0AFgADAAkAFgAQAAMAGwAeABgAGwAhAB4AKgA5AC0AKgA2ADkAIgAuAB8AIgArAC4AGgAmAB0AGgApACYAIAAoABkAIAAvACgAHAAsACMAHAAlACwAOwBAADQAOwBHAEAAJwAwACQAJwAzADAALQAzACcALQA5ADMAJAA2ACoAJAAwADYAPABFAEIAPAA/AEUAMQBEADgAMQA9AEQANwBGADoANwBDAEYANQA+ADIANQBBAD4A"),
"material": SubResource("StandardMaterial3D_d40no"),
"name": "computer",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 72,
"vertex_data": PackedByteArray("AACGNwLqwtcAAIY3AuorwAAAhjcC6lTVAAAp7QLqGsAAACntAuorwAAAKe0C6lTVAACGN/wVwtcAAIY3/BVC/AAAhjf8FVTVAAAp7fwVGsAAACnt/BVC/AAAKe38FVTV//+xJP//VNX//7Ek///C1///sST//yvA////////VNX///////8awP///////yvA//+xJAAAVNX//7EkAADC1///sSQAAEL8/////wAAVNX/////AAAawP////8AAEL8QFujOYKZ8NdAW6M5gpnZwkBbozmCme3WQFujOXxm8NdAW6M5fGb6/EBbozl8Zu3WvqTUM82e8Ne+pNQzzZ7t1r6k1DPNntnCvqTUMzFh8Ne+pNQzMWHt1r6k1DMxYfr8hVemEXxm8NeFV6YRfGb6/IVXphF8Zu3WhVemEYKZ8NeFV6YRgpnZwoVXphGCme3WAqHYCzFh8NcCodgLMWHt1gKh2AsxYfr8AqHYC82e8NcCodgLzZ7t1gKh2AvNntnC1iHkFTZB8NfWIeQVNkHt/NYh5BU2QdPV1iHkFci+8NfWIeQVyL5Dv9Yh5BXIvtPVstaaBzE08Ney1poHMTTD1rLWmgcxNO38staaB83L8Ney1poHzcvD1rLWmgfNy0a/MyEAADZB/78zIQAANkHt/DMhAAA2QdPVMyEAAMi+/78zIQAAyL5DvzMhAADIvtPVD9YAADE0/78P1gAAMTTD1g/WAAAxNO38D9YAAM3L/78P1gAAzcvD1g/WAADNy0a/6VMsWKN4W4dVVaqqF/rPi6N4W4dVVaqq6VMsWANC+71UVaqqF/rPiwNC+71UVaqqqqpUVelTLFijeFuHqqpUVRf6z4ujeFuHqqpUVelTLFgDQvu9qqpUVRf6z4sDQvu9MKydpx56SYY5V5yrMKydp9ZDWMA5V5yrMKydp8WoYlQeekmGMKydp8WoYlTWQ1jAMKydp9ZDWMA5V5yrMKydpx56SYY5V5yrMKydp8WoYlTWQ1jAMKydp8WoYlQeekmGMKydp2JC677tVfaqMKydp8f5hPntVfaqMKydp/aoe1RgQum+MKydp/aoe1TI+YT5AAD/f2JC677tVfaqAAD/f8f5hPntVfaqAAD/f/aoe1RgQum+AAD/f/aoe1TI+YT5")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_d5qpx")

[sub_resource type="ViewportTexture" id="ViewportTexture_xo2fp"]
viewport_path = NodePath("Screen/SubViewportContainer/SubViewport")

[node name="monitor_reference" instance=ExtResource("1_pa6c8")]
script = ExtResource("2_413xo")

[node name="desk" parent="." index="0"]
layers = 2
mesh = SubResource("ArrayMesh_a2npm")

[node name="focus_origin" type="Node3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.994813, -0.166852)

[node name="Screen" type="Sprite3D" parent="." index="2"]
transform = Transform3D(-1.1233827e-08, 0, 0.255, 0, 0.27, 0, -0.257, 0, -1.1146404e-08, 0.7351655, 1.0274941, -0.16527636)
transparency = 0.5
texture = SubResource("ViewportTexture_xo2fp")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Screen" index="0"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 144.0
offset_top = -557.0
offset_right = 794.0
offset_bottom = -72.0
grow_horizontal = 0
grow_vertical = 0
stretch = true

[node name="SubViewport" type="SubViewport" parent="Screen/SubViewportContainer" index="0"]
handle_input_locally = false
size = Vector2i(650, 485)
render_target_update_mode = 4

[node name="Control" type="Control" parent="Screen/SubViewportContainer/SubViewport" index="0"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 1
theme = ExtResource("5_37hri")
script = ExtResource("4_755ft")

[node name="ColorRect" type="ColorRect" parent="Screen/SubViewportContainer/SubViewport/Control" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.74509805, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="Screen/SubViewportContainer/SubViewport/Control" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 450)
layout_mode = 0
offset_left = 5.0
offset_top = 7.5
offset_right = 645.0
offset_bottom = 457.5
size_flags_vertical = 0
horizontal_scroll_mode = 0

[node name="TerminalLog" type="VBoxContainer" parent="Screen/SubViewportContainer/SubViewport/Control/ScrollContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Screen/SubViewportContainer/SubViewport/Control/ScrollContainer/TerminalLog" index="0"]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2
size_flags_vertical = 6
text = "GombuComp [Version 5.3.05943.234]
(c) Gombudor Corporation. All rights reserved."
autowrap_mode = 1
autowrap_trim_flags = 0
justification_flags = 162

[node name="TerminalInput" type="HBoxContainer" parent="Screen/SubViewportContainer/SubViewport/Control" index="2"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 7.5
offset_right = 645.0
offset_bottom = 477.5

[node name="Label" type="Label" parent="Screen/SubViewportContainer/SubViewport/Control/TerminalInput" index="0"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "C:\\Users\\local>"

[node name="TextEdit" type="TextEdit" parent="Screen/SubViewportContainer/SubViewport/Control/TerminalInput" index="1"]
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource("5_37hri")
caret_type = 1
caret_blink = true
caret_draw_when_editable_disabled = true
caret_mid_grapheme = true

[connection signal="gui_input" from="Screen/SubViewportContainer/SubViewport/Control/TerminalInput/TextEdit" to="Screen/SubViewportContainer/SubViewport/Control" method="_on_text_edit_gui_input"]
